Set default icon size to 1rem (16px)

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -162,3 +162,8 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
     -moz-appearance: textfield;
 }
+
+.lucide {
+    width: 1em;
+    height: 1em;
+}
