어드민 / 코드에프 카드 파서 / 목록페이지 - 버전 모달 추가

--- a/src/styles/packs/app.scss
+++ b/src/styles/packs/app.scss
@@ -10,6 +10,7 @@
 @import '../content-layout/index';
 @import '../v2/index';
 @import '../button';
+@import '../code';
 @import '../tooltip';
 @import '../tasting';
 @import '../modal';
