--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -103,4 +103,7 @@
     .grid-cols-#{$i} {
         grid-template-columns: repeat(#{$i}, minmax(0, 1fr));
     }
+    .col-span-#{$i} {
+        grid-column: span $i / span $i;
+    }
 }
