인보이스 파서 - 수정페이지 / 이메일 테이블뷰 추가

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1268,3 +1268,11 @@ progress::-moz-progress-bar {
     display: flex;
     will-change: transform;
 }
+
+html.overscroll-x-contain body {
+    overscroll-behavior-x: contain;
+}
+
+html.overscroll-x-none body {
+    overscroll-behavior-x: none;
+}
